Bug 641906 - Use system theme colors in nsLookAndFeel on Android. r=blassey